import { IItem } from './IItem';
import { IScorable } from './IScorable';

export interface IScorableItem extends IScorable, IItem {}
