export interface IItem {
  getId(): string;
  getName(): string;
}
