@startuml randomnest
hide circle
skinparam classAttributeIconSize 0

package "Domain (Alpha)" {

  ' Placeholder (domaine) pour éviter de tirer tout le package Scoring ici
  class ScoreContext

  interface IItem {
    +getId(): String
    +getName(): String
  }

  interface IScorable {
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
  }

  interface IScorableItem extends IItem, IScorable

  interface ICollection {
    +getItems(): List<IItem>
  }

  interface IScorableCollection extends ICollection {
    +getItems(): List<IScorableItem>
  }

  interface IScoreAttribute extends IScorable {
    +getName(): String
  }

  interface IMusic extends IScorableItem {
    +getArtist(): Artist
    +getStyle(): Style
    +getAttributes(): List<IScoreAttribute>
  }

  class Music implements IMusic {
    +artist: Artist
    +style: Style
    +attributes: List<IScoreAttribute>

    +getId(): String
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
    +getArtist(): Artist
    +getStyle(): Style
    +getAttributes(): List<IScoreAttribute>
  }

  class Artist implements IScorableItem {
    +getId(): String
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
  }

  class Style implements IScorableItem {
    -id: String
    -name: String
    -scorables: List<IScorable>

    +getId(): String
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
    +addScorable(scorable: IScorable): void
  }

  class RecencyAttribute implements IScoreAttribute {
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
  }

  class PlayCountAttribute implements IScoreAttribute {
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
  }

  class LikeAttribute implements IScoreAttribute {
    +getName(): String
    +calculateScore(ctx: ScoreContext): float
    +getScoreDependencies(): List<IScorable>
  }

  class Playlist implements IScorableCollection {
    +getItems(): List<IScorableItem>
  }
}

Playlist o-- "0..*" IScorableItem : items

Music o-- Artist : artist
Music o-- Style : style

Music o-- "0..*" IScoreAttribute : attributes
Style o-- "0..*" IScorable : scorables

@enduml
